--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>A Data-Driven Model with Feedback Calibration Embedded Blood Pressure Estimator Using Reflective Photoplethysmography</papertitle>
+                <papertitle><strong>A Data-Driven Model with Feedback Calibration Embedded Blood Pressure Estimator Using Reflective Photoplethysmography</strong></papertitle>
                 <br>
               Jia-Wei Chen, Hsin-Kai Huang, Yu-Ting Fang, Yen-Ting Lin, Shih-Zhang Li, Bo-Wei Chen, Yu-Chun Lo, <strong>Po Chuan Chen</strong>, Ching-Fu Wang, You-Yin Chen<br>
         <em>Sensors</em>, 2022
@@ -127,7 +127,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>A proof-of-principle simulation for closed-loop control based on preexisting experimental thalamic DBS-enhanced instrumental learning</papertitle>
+                <papertitle><strong>A proof-of-principle simulation for closed-loop control based on preexisting experimental thalamic DBS-enhanced instrumental learning</strong></papertitle>
                 <br>
               Ching-Fu Wang, Shih-Hung Yang, Sheng-Huang Lin, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Han-Chi Pan, Hsin-Yi Lai, Lun-De Liao, Hui-Ching Lin, Hsu-Yan Chen, Wei-Chen Huang, Wun-Jhu Huang, You-Yin Chen
               <br>
@@ -145,7 +145,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>A Sliced Inverse Regression (SIR) Decoding the Forelimb Movement from Neuronal Spikes in the Rat Motor Cortex</papertitle>
+                <papertitle><strong>A Sliced Inverse Regression (SIR) Decoding the Forelimb Movement from Neuronal Spikes in the Rat Motor Cortex</strong></papertitle>
                 <br>
               Shih-Hung Yang, You-Yin Chen, Sheng-Huang Lin, Lun-De Liao, Henry Horng-Shing Lu, Ching-Fu Wang, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Thanh Dat Phan, Hsiang-Ya Chao, Hui-Ching Lin, Hsin-Yi Lai, Wei-Chen Huang
               <br>
@@ -163,7 +163,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</papertitle>
+                <papertitle><strong>Dual Directional Overdriving Method for Fast Response LC-lenses on Autostereoscopic 3D Display</strong></papertitle>
                 <br>
               <strong>Po Chuan Chen</strong>, Chih-Wei Chen, Yi-Pai Huang
               <br>
@@ -192,7 +192,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Hip Exoskeleton</papertitle>
+                <papertitle><strong>Hip Exoskeleton</strong></papertitle>
                 <br>
                  Develop novel exoskeleton controllers allowing robust adaptation to various walking conditions. The controllers are based on the electromyography-driven neuromuscular model to simulate muscle activities and biological torque for a high-torque hip exoskeleton. The primary purpose of this research is to reduce metabolic costs for older people at their self-select-walking speed.
                  <br>
@@ -210,7 +210,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Hand Exoskeleton</papertitle>
+                <papertitle><strong>Hand Exoskeleton</strong></papertitle>
                 <br>
                  Built an exoskeleton‑based rehabilitation system from scratch, including mechanical structure, control system, and electronic design, for patients with peripheral nerve injuries. The system was controlled via electromyography (EMG) of the patient and was operated on an Arduino embedded development board.
                  <br>
@@ -227,7 +227,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Fish Aggregation</papertitle>
+                <papertitle><strong>Fish Aggregation</strong></papertitle>
                 <br>
                  Simulated the fish schooling behaviors with shark intervention. Initialized a connected graph using Delaunay triangulation, so each fish can always find a path to the other fish. Formulated the equations to construct the fish motion of cohesion, separation, alignment,
 and dodge.
@@ -245,7 +245,7 @@ and dodge.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Intelligent Shopping Assistance Car</papertitle>
+                <papertitle><strong>Intelligent Shopping Assistance Car</strong></papertitle>
                 <br>
                  Developed a control law with object detection to follow a moving target at a certain
 distance and avoid obstacles at the same time.
@@ -264,7 +264,7 @@ distance and avoid obstacles at the same time.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Navigation in a Maze</papertitle>
+                <papertitle><strong>Navigation in a Maze</strong></papertitle>
                 <br>
                  Utilized KNN to classify different traffic signs in the maze and designed a control law to
 navigate the turtlebot to the final goal without bumping any obstacles.
@@ -282,7 +282,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Music Genre Classification</papertitle>
+                <papertitle><strong>Music Genre Classification</strong></papertitle>
                 <br>
               Utilized convolutional deep belief network on the acoustic spectrum to extract image features for classifying music genres, such as classic and metal music.
               <br>
@@ -298,7 +298,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Natural Languages Processing</papertitle>
+                <papertitle><strong>Natural Languages Processing</strong></papertitle>
                 <br>
                   Proposed a natural language processing project with recursive neural network and Word2Vec on sentiment analysis on Chinese post.
                  <br>
@@ -315,7 +315,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Inverted Pendulum</papertitle>
+                <papertitle><strong>Inverted Pendulum</strong></papertitle>
                 <br>
                   Used reinforcement learning to balance an inverted pendulum.
                  <br>
@@ -332,7 +332,7 @@ navigate the turtlebot to the final goal without bumping any obstacles.
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>Interactive Plastic Box</papertitle>
+                <papertitle><strong>Interactive Plastic Box</strong></papertitle>
                 <br>
                  Utilized Support Machine Vector (SVM) for classifying acoustic spectrum.
                  <br>
