--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <p>
-                <papertitle>An Instrumented Glove-Controlled Portable Hand-Exoskeleton for Bilateral Hand Rehabilitation</papertitle>
+                <papertitle><strong>An Instrumented Glove-Controlled Portable Hand-Exoskeleton for Bilateral Hand Rehabilitation</strong></papertitle>
                 <br>
               Shih-Hung Yang ,Chia-Lin Koh, Chun-Hang Hsu, <strong>Po Chuan Chen</strong>, Jia-Wei Chen, Yu-Hao Lan, Yi Yang, Yi-De Lin, Chun-Hung Wu, Hsien-Kuang Liu, Yu-Chun Lo, Guan-Tze Liu, Chao-Hung Kuo, You-Yin Chen
               <br>
