--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                 <br>
                  Develop novel exoskeleton controllers allowing robust adaptation to various walking conditions. The controllers are based on the electromyography-driven neuromuscular model to simulate muscle activities and biological torque for a high-torque hip exoskeleton. The primary purpose of this research is to reduce metabolic costs for older people at their self-select-walking speed.
                  <br>
-<!--               <a href="https://youtu.be/8SLx2H6cLKg">Link</a> -->
+                 Jan 2022 - Present
+              <a href="https://drive.google.com/file/d/1Qs4yEYiNRWI7-ouJWzCjuJqXueRUIDLV/view?usp=sharing">Link</a>
               <p></p>
             </td>
           </tr> 
@@ -214,6 +215,7 @@
                 <br>
                  Built an exoskeleton‑based rehabilitation system from scratch, including mechanical structure, control system, and electronic design, for patients with peripheral nerve injuries. The system was controlled via electromyography (EMG) of the patient and was operated on an Arduino embedded development board.
                  <br>
+                 Apr 2016 – Sep 2017
               <a href="https://youtu.be/8SLx2H6cLKg">Link</a>
               <p></p>
             </td>
@@ -231,6 +233,7 @@
                 <br>
                  Simulated the fish schooling behaviors with shark intervention. Initialized a connected graph using Delaunay triangulation, so each fish can always find a path to the other fish. Formulated the equations to construct the fish motion of cohesion, separation, alignment, and dodge.
                  <br>
+                 Dec 2021
               <a href="https://youtu.be/ur-BrBaMQOw">Link</a>
               <p></p>
             </td>
@@ -248,6 +251,7 @@
                 <br>
                  Developed a control law with object detection to follow a moving target at a certain distance and avoid obstacles at the same time.
                  <br>
+                 Apr 2022
               <a href="https://youtu.be/FS7lCo05tY4">Link</a>
               <p></p>
             </td>
@@ -266,6 +270,7 @@
                 <br>
                  Utilized KNN to classify different traffic signs in the maze and designed a control law to navigate the turtlebot to the final goal without bumping any obstacles.
                  <br>
+                 May 2022
               <a href="https://youtu.be/tHgAMI4NZgM">Link</a>
               <p></p>
             </td>
@@ -283,6 +288,7 @@
                 <br>
               Utilized convolutional deep belief network on the acoustic spectrum to extract image features for classifying music genres, such as classic and metal music.
               <br>
+              Oct 2013 ‑ July 2015
               <p></p>
             </td>
           </tr> 
@@ -299,6 +305,7 @@
                 <br>
                   Proposed a natural language processing project with recursive neural network and Word2Vec on sentiment analysis on Chinese post.
                  <br>
+                 Oct 2013 ‑ July 2015
 <!--               <a href="https://www.youtube.com/watch?v=8SLx2H6cLKg">Link</a> -->
               <p></p>
             </td>
@@ -316,6 +323,7 @@
                 <br>
                   Used reinforcement learning to balance an inverted pendulum.
                  <br>
+                 Oct 2013 ‑ July 2015
               <a href="https://youtu.be/0mPZffdVxEE">Link</a>
               <p></p>
             </td>
