--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
             </td>
         </tr> 
 
+        <tr onmouseout="Brain_Stimulation_2021()" onmouseover="Brain_Stimulation_2021()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Brain Stimulation.png' width="175">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <p>
+                <papertitle><strong>A Proof-of-Principle Simulation for Closed-Loop Control Based on Preexisting Experimental Thalamic DBS-enhanced Instrumental Learning</strong></papertitle>
+                <br>
+              Ching-Fu Wang, Shih-Hung Yang, Sheng-Huang Lin, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Han-Chi Pan, Hsin-Yi Lai, Lun-De Liao, Hui-Ching Lin, Hsu-Yan Chen, Wei-Chen Huang, Wun-Jhu Huang, You-Yin Chen
+              <br>
+        <em>Brain Stimulation</em>, 2017
+              <a href="https://doi.org/10.1016/j.brs.2017.02.004">Link</a>
+              <p></p>
+            </td>
+        </tr> 
 
         <tr onmouseout="Sensors_2022()" onmouseover="Sensors_2022()">
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -118,24 +135,6 @@
             </td>
         </tr> 
 
-
-        <tr onmouseout="Brain_Stimulation_2021()" onmouseover="Brain_Stimulation_2021()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/Brain Stimulation.png' width="175">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <p>
-                <papertitle><strong>A proof-of-principle simulation for closed-loop control based on preexisting experimental thalamic DBS-enhanced instrumental learning</strong></papertitle>
-                <br>
-              Ching-Fu Wang, Shih-Hung Yang, Sheng-Huang Lin, <strong>Po Chuan Chen</strong>, Yu-Chun Lo, Han-Chi Pan, Hsin-Yi Lai, Lun-De Liao, Hui-Ching Lin, Hsu-Yan Chen, Wei-Chen Huang, Wun-Jhu Huang, You-Yin Chen
-              <br>
-        <em>Brain Stimulation</em>, 2017
-              <a href="https://doi.org/10.1016/j.brs.2017.02.004">Link</a>
-              <p></p>
-            </td>
-        </tr> 
 
         <tr onmouseout="Front_Neurosci_2016()" onmouseover="Front_Neurosci_2016()">
             <td style="padding:20px;width:25%;vertical-align:middle">
