--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 I am currently doing research as an XXXXX with Dr. Aaron Young at (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>)
               </p>
               <p>
-                I have a three and a half year background as an embedded software engineer at <a href="https://mediatek-marketing-production.cl-us-east-4.servd.dev/">Mediatek</a>, Taiwan, where I worked on the development of digital image processing, and addressing real-time system concerns. Academically, I have delved into various research areas such as, studying liquid crystal lenses for 3D displays, music genre classification, natural language processing, and controllers for exoskeletons.
+                I have a three and a half year background as an embedded software engineer at <a href="https://mediatek-marketing-production.cl-us-east-4.servd.dev/">Mediatek</a>, Taiwan, where I worked on the development of digital image processing, and addressing real-time system concerns. Academically, I have  also delved into various research areas such as, studying liquid crystal lenses for 3D displays, music genre classification, natural language processing, and controllers for exoskeletons.
               </p>
               <p style="text-align:center">
                 <a href="mailto:pchen353@gatech.edu">Email</a> &nbsp/&nbsp
