--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </p>
               <p>
                 Hello! My name is Po (陳博詮), and I am a graduate from Georgia Institute of Technology, where I received my Master degree (MSc) in Electrical and Computer Enginneering, specializing in control. I am a passionate exoskeleton maker with a strong background in control and real-time systems. My focus is on developing innovative exoskeleton controllers that can adapt effectively to diverse walking conditions. Also, I have a drive is creating robust solutions that enhance the functionality of exoskeletons. 
-                I am currently doing research as an XXXXX with Dr. Aaron Young at (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>)
+                I am currently doing research at Dr. Aaron Young's (<a href="https://epic.gatech.edu">Exoskeleton and Prosthetic Intelligent Controls (EPIC) Lab</a>)
               </p>
               <p>
                 I have a three and a half year background as an embedded software engineer at <a href="https://mediatek-marketing-production.cl-us-east-4.servd.dev/">Mediatek</a>, Taiwan, where I worked on the development of digital image processing, and addressing real-time system concerns. Academically, I have  also delved into various research areas such as, studying liquid crystal lenses for 3D displays, music genre classification, natural language processing, and controllers for exoskeletons.
